syntax = "proto3";

import "renderer/drawable.proto";
import "renderer/gl_types.proto";

package renderer;

enum UpdateType {
    Reset = 0;
    Increment = 1;
}

message Entity {
    string id = 1;
    optional Drawable drawable = 2;
}

message Camera {
    optional float_array view = 1;
    optional float_array proj = 2;
}

message RendererSnapshot {
    optional UpdateType update_type = 1;
    repeated Entity entities = 2;
}